--- a/app/src/main/res/drawable/silhouette_person.xml
+++ b/app/src/main/res/drawable/silhouette_person.xml
@@ -13,15 +13,12 @@
         android:translateY="2">
 
         <path
-            android:strokeWidth="0.4"
-            android:strokeColor="#800e276b"
             android:fillColor="#3F8EFC"
             android:pathData="M12,4A4,4 0 0,1 16,8A4,4 0 0,
-        1 12,12A4,4 0 0,1 8,8A4,4 0 0,1 12,4M12,14C16.42,
-        14 20,15.79 20,18V20H4V18C4,15.79 7.58,14 12,14Z"
-            />
-
-
+            1 12,12A4,4 0 0,1 8,8A4,4 0 0,1 12,4M12,14C16.42,
+            14 20,15.79 20,18V20H4V18C4,15.79 7.58,14 12,14Z"
+            android:strokeWidth="0.4"
+            android:strokeColor="#800e276b" />
     </group>
 
 </vector>
